Added code changes to check if the references invoked by the client is included in the dependency.