@@ -1,7 +1,7 @@
 package org.dep.analyzer;
 
 import fr.dutra.tools.maven.deptree.core.Node;
-import javassist.NotFoundException;
+import javassist.*;
 import javassist.bytecode.BadBytecode;
 import org.callsite.CallSiteFinder;
 import org.dep.util.CommandExecutor;
@@ -13,6 +13,7 @@ import org.slf4j.LoggerFactory;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -27,32 +28,159 @@ import static org.dep.util.Helper.createFolderIfNotExists;
 public class DepUsage {
 
     private static final Logger logger = LoggerFactory.getLogger(DepUsage.class);
-    private static final String COPY_DEPENDENCY_FOLDER = "\\DepCopied";
-    private static final String TARGET = "\\target";
-    private static final String CLASSES = "\\classes";
-    private static final String TEST_CLASSES = "\\test-classes";
+    private static final String COPY_DEPENDENCY_FOLDER = "/DepCopied";
+    private static final String TARGET = "/target";
+    private static final String CLASSES = "/classes";
+    private static final String TEST_CLASSES = "/test-classes";
     private final static String META_INF_FILE = "META-INF";
 
-    public void test(Graph<Node, DefaultEdge> dependencyTree, File projectDir, String mvnCmd) throws IOException, NotFoundException, BadBytecode {
+    public void extractDepUsage(Graph<Node, DefaultEdge> dependencyTree, File projectDir, String mvnCmd) throws IOException, NotFoundException, BadBytecode {
         if (copyProjectDependencies(projectDir, mvnCmd)) {
-            Set<String> javaClassesInRepo = findJavaClassesInDirectory(projectDir);
+            Set<String> clientClasses = findJavaClassesInDirectory(projectDir);
             // get classes in dependencies jar files
-            File dependencyDirectory = new File(projectDir + COPY_DEPENDENCY_FOLDER);
-            Map<Node, Set<String>> dependencyClasses = new LinkedHashMap<>();
-            Set<String> externalFiles = getDependencyClasses(dependencyDirectory, dependencyClasses, dependencyTree);
-            if (buildClientProject(projectDir, mvnCmd)) {
-                String projectTargetFolder = projectDir + TARGET;
-                // check if target exists and class and test-classes
-                File targetFolder = new File(projectTargetFolder);
-                if (targetFolder.exists()) {
-                    // get classes in target folder
-                    File classesDirectory = new File(projectTargetFolder + CLASSES);
-                    File testClassesDirectory = new File(projectTargetFolder + TEST_CLASSES);
-                    Map<String, Set<String>> classesCallSites = getCallSitesToVerify(classesDirectory);
-                    // classesCallSites.entrySet().forEach(entrey -> {entrey.getValue().forEach(val -> logger.info(val));});
-                    Map<String, Set<String>> testClassesCallSites = getCallSitesToVerify(testClassesDirectory);
-                    // TODO: filter the client related classes and external classes
-                    // TODO: map the call sites with dependency classes
+            if (!clientClasses.isEmpty()) {
+                File dependencyDirectory = new File(projectDir + COPY_DEPENDENCY_FOLDER);
+                Map<Node, Set<String>> dependencyClasses = new LinkedHashMap<>();
+                //TODO: do we need to keep track of the files that could not be extracted
+                Set<String> externalFiles = getDependencyClasses(dependencyDirectory, dependencyClasses, dependencyTree);
+                if (buildClientProject(projectDir, mvnCmd)) {
+                    String projectTargetFolder = projectDir + TARGET;
+                    // check if target exists and class and test-classes
+                    File targetFolder = new File(projectTargetFolder);
+                    if (targetFolder.exists()) {
+                        // get classes in target folder
+                        File classesDirectory = new File(projectTargetFolder + CLASSES);
+                        File testClassesDirectory = new File(projectTargetFolder + TEST_CLASSES);
+                        Map<String, Set<String>> callSitesInClientSourceCode = getCallSitesToVerify(classesDirectory);
+                        // classesCallSites.entrySet().forEach(entrey -> {entrey.getValue().forEach(val -> logger.info(val));});
+                        Map<String, Set<String>> callSitesInClientTestCode = getCallSitesToVerify(testClassesDirectory);
+                        // TODO: filter the client related classes and external classes
+                        excludeInternalCallSites(callSitesInClientSourceCode, clientClasses);
+                        excludeInternalCallSites(callSitesInClientTestCode, clientClasses);
+                        // TODO: map the call sites with dependency classes
+                        Map<Node, Map<String, Set<String>>> invokedFunctions = new HashMap<>();
+                        getDeepDepCalls(dependencyClasses, callSitesInClientSourceCode, invokedFunctions);
+                        getDeepDepCalls(dependencyClasses, callSitesInClientTestCode, invokedFunctions);
+                        // Check if all the functions invoked are actually in the jar file of the dependency its matched with
+                    }
+                }
+            }
+        }
+    }
+
+    private void verifyFunctionsAreInDepJars(Map<Node, Map<String, Set<String>>> invokedMethods) {
+        Map<Node, Map<String, Set<String>>> mappedMethods = new HashMap<>();
+        Map<Node, Map<String, Set<String>>> unMappedMethods = new HashMap<>();
+        for (Map.Entry<Node, Map<String, Set<String>>> invokedMethodsEntry : invokedMethods.entrySet()) {
+            Node node = invokedMethodsEntry.getKey();
+            Map<String, Set<String>> invokedClassAndMethods = invokedMethodsEntry.getValue();
+            String jarName = node.getJarName();
+            // check if jar is in path
+            try (JarFile jarFile = new JarFile(COPY_DEPENDENCY_FOLDER + "/" + jarName)) {
+                for (Map.Entry<String, Set<String>> invokedClassAndMethodsEntry : invokedClassAndMethods.entrySet()) {
+                    String className = invokedClassAndMethodsEntry.getKey();
+                    Set<String> methodsAndFields = invokedClassAndMethodsEntry.getValue();
+
+                    String classEntryName = className.replace('.', '/') + ".class";
+                    JarEntry entry = jarFile.getJarEntry(classEntryName);
+
+                    if (entry == null) {
+                        System.out.println("Class " + className + " not found in the jar.");
+                        Map unMappedClasses = unMappedMethods.getOrDefault(node, new HashMap<>());
+                        unMappedClasses.put(className, methodsAndFields);
+                        unMappedMethods.put(node, unMappedClasses);
+                        break;
+                    }
+                    if (methodsAndFields.isEmpty()) {
+                        Map mappedClasses = mappedMethods.getOrDefault(node, new HashMap<>());
+                        mappedClasses.put(className, methodsAndFields);
+                        mappedMethods.put(node, mappedClasses);
+                    } else {
+                        // if there is a match need to check if the class contains the fields and methods
+                        InputStream classInputStream = jarFile.getInputStream(entry);
+                        ClassPool pool = ClassPool.getDefault();
+                        CtClass ctClass = pool.makeClass(classInputStream);
+
+                        boolean methodFound = false;
+                        boolean fieldFound = false;
+                        Set<String> unMappedMethodsAndFields = new HashSet<>();
+                        Set<String> mappedMethodsAndFields = new HashSet<>();
+                        for (String methodOrField : methodsAndFields) {
+                            // Check methods
+                            for (CtMethod method : ctClass.getDeclaredMethods()) {
+                                if (method.getName().equals(methodOrField)) {
+                                    mappedMethodsAndFields.add(methodOrField);
+                                    methodFound = true;
+                                }
+                            }
+
+                            // Check fields
+                            for (CtField field : ctClass.getDeclaredFields()) {
+                                if (field.getName().equals(methodOrField)) {
+                                    mappedMethodsAndFields.add(methodOrField);
+                                    fieldFound = true;
+                                }
+                            }
+                            if (!methodFound && !fieldFound) {
+                                unMappedMethodsAndFields.add(methodOrField);
+                            }
+                            ctClass.detach(); // Release resources
+                        }
+                        if (!mappedMethodsAndFields.isEmpty()) {
+                            Map mappedClasses = mappedMethods.getOrDefault(node, new HashMap<>());
+                            mappedClasses.put(className, mappedMethodsAndFields);
+                            mappedMethods.put(node, mappedClasses);
+
+                        }
+                        if (!unMappedMethodsAndFields.isEmpty()) {
+                            Map unMappedClasses = unMappedMethods.getOrDefault(node, new HashMap<>());
+                            unMappedClasses.put(className, unMappedMethodsAndFields);
+                            unMappedMethods.put(node, unMappedClasses);
+                        }
+
+                    }
+                }
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+
+
+        }
+    }
+
+    private void getDeepDepCalls(Map<Node, Set<String>> dependencyClasses, Map<String, Set<String>> callSitesInClient, Map<Node, Map<String, Set<String>>> invokedFunctions) {
+        for (String classSite : callSitesInClient.keySet()) {
+            for (Map.Entry<Node, Set<String>> entry : dependencyClasses.entrySet()) {
+                Node node = entry.getKey();
+                Set<String> libClasses = entry.getValue();
+                for (String libClass : libClasses) {
+                    if (libClass.equals(classSite)) { //TODO have to check if this works with Inner classes which hve the $ sign
+                        Map invokedCallAndMethods = invokedFunctions.getOrDefault(node, new HashMap<>());
+                        invokedCallAndMethods.put(classSite, callSitesInClient.get(classSite));
+                        invokedFunctions.put(node, invokedCallAndMethods);
+                    }
+                }
+            }
+        }
+    }
+
+    /**
+     * Exclude the internal classes from the class sites
+     *
+     * @param callSites       all call sites which needs to be filtered
+     * @param internalClasses internal classes to be filtered out
+     */
+    private void excludeInternalCallSites(Map<String, Set<String>> callSites, Set<String> internalClasses) {
+        if (callSites != null) {
+            Iterator<String> iterator = callSites.keySet().iterator();
+
+            while (iterator.hasNext()) {
+                String classOfSite = iterator.next();
+                for (String internalClass : internalClasses) {
+                    if (classOfSite.startsWith(internalClass) || (classOfSite.startsWith("[L") && classOfSite.startsWith("[L" + internalClass))) {
+                        iterator.remove(); // Safely remove the entry
+                        break; // Exit inner loop after removal
+                    }
                 }
             }
         }
@@ -60,9 +188,10 @@ public class DepUsage {
 
     /**
      * Get call sites of project classes which needs to be verified with if they are external dependency calls
+     *
      * @param classesDirectory directory path to get the class files
-     * @return                 A map containing internal and external call sites used in the project
-     * @throws IOException     An exception will occur if the find call site method returns an exception while process
+     * @return A map containing internal and external call sites used in the project
+     * @throws IOException An exception will occur if the find call site method returns an exception while process
      */
     private Map<String, Set<String>> getCallSitesToVerify(File classesDirectory) throws IOException, NotFoundException, BadBytecode {
         Map<String, Set<String>> classesAndCallSites = new HashMap<>();
@@ -73,9 +202,23 @@ public class DepUsage {
                     List<File> classFiles = Files.walk(projectClassesDir.toPath())
                             .map(Path::toFile)
                             .filter(f -> f.getName().endsWith(".class"))
-                            .collect(Collectors.toList());
-                    for (File classFile: classFiles) {
-                        classesAndCallSites.putAll(CallSiteFinder.extractCallSites(classFile.getAbsolutePath()));
+                            .toList();
+                    for (File classFile : classFiles) {
+                        Map<String, Set<String>> extractedCallSites = CallSiteFinder.extractCallSites(classFile.getAbsolutePath());
+                        for (Map.Entry<String, Set<String>> entry : extractedCallSites.entrySet()) {
+                            String key = entry.getKey();
+                            Set<String> newSet = entry.getValue();
+
+                            classesAndCallSites.merge(
+                                    key,
+                                    new HashSet<>(newSet), // Defensive copy
+                                    (existingSet, incomingSet) -> {
+                                        existingSet.addAll(incomingSet);
+                                        return existingSet;
+                                    }
+                            );
+                        }
+                        //  classesAndCallSites.putAll(CallSiteFinder.extractCallSites(classFile.getAbsolutePath()));
                     }
                 }
             }
@@ -175,7 +318,7 @@ public class DepUsage {
     /**
      * Build the client project without tests to generate the class files for the analysis
      *
-     * @param projectDir       the local directory which contains the project
+     * @param projectDir the local directory which contains the project
      * @return if the project was successfully built or not
      * @throws IOException
      */
